# ecsdk

./: CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
crates/ecsdk/: Cargo.toml  README.md
crates/ecsdk/src/: lib.rs
crates/ecsdk_app/: Cargo.toml  README.md
crates/ecsdk_app/src/: async_app.rs  lib.rs
crates/ecsdk_core/: Cargo.toml  README.md
crates/ecsdk_core/src/: lib.rs  message.rs  queue.rs  signal.rs
crates/ecsdk_macros/: Cargo.toml  README.md
crates/ecsdk_macros/src/: client_request.rs  lib.rs  state_component.rs
crates/ecsdk_network/: Cargo.toml  README.md
crates/ecsdk_network/src/: app.rs  client.rs  connection.rs  lib.rs  server.rs
crates/ecsdk_replicon/: Cargo.toml
crates/ecsdk_replicon/src/: lib.rs
crates/ecsdk_replicon_transport/: Cargo.toml
crates/ecsdk_replicon_transport/src/: lib.rs
crates/ecsdk_tasks/: Cargo.toml  README.md
crates/ecsdk_tasks/src/: lib.rs  spawn.rs  task.rs
crates/ecsdk_term/: Cargo.toml  README.md
crates/ecsdk_term/src/: lib.rs  plugin.rs  terminal.rs
crates/ecsdk_tracing/: Cargo.toml  README.md
crates/ecsdk_tracing/src/: layer.rs  lib.rs  plugin.rs
crates/ecsdk_transport/: Cargo.toml  README.md
docs/: architecture.md
examples/compose/: Cargo.toml
examples/compose/src/: backend.rs  backend_mock.rs  client.rs  container.rs  daemon.rs  ipc.rs  isomorphic.rs  lifecycle.rs  main.rs  message.rs  network.rs  protocol.rs  replay.rs  replicon.rs  role.rs  status.rs
examples/compose/src/render/: mod.rs  plain.rs  tui.rs
src/: app.rs  backend.rs  backend_mirror.rs  backend_mock.rs  bridge.rs  client.rs  cmd.rs  components.rs  container.rs  daemon.rs  events.rs  ipc.rs  lib.rs  lifecycle.rs  main.rs  message.rs  msg.rs  protocol.rs  render.rs  replay.rs  replicon_transport.rs  resources.rs  state_event.rs  task.rs
src/render/: mod.rs  plain.rs  tui.rs
src/systems/: lifecycle.rs  mod.rs
