[package]
name = "ecstest"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["bevy_state", "multi_threaded", "serialize"] }
bevy_replicon = { version = "0.39", default-features = false, features = ["server", "client"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
rand = "0.9"
crossterm = { version = "0.29", features = ["event-stream"] }
futures-util = { version = "0.3", features = ["sink"] }
clap = { version = "4", features = ["derive"] }
tokio-util = { version = "0.7", features = ["codec"] }
interprocess = { version = "2.4", features = ["tokio"] }
seldom_state = { git = "https://github.com/Wiwip/seldom_state.git", rev = "cc6c89f" }
serde_json = "1.0"
