[workspace]
members = [
    "crates/ecsdk_macros",
    "crates/ecsdk_core",
    "crates/ecsdk_app",
    "crates/ecsdk_tasks",
    "crates/ecsdk_term",
    "crates/ecsdk_replicon",
    "crates/ecsdk_replicon_transport",
    "crates/ecsdk_tracing",
    "examples/compose",
]
resolver = "3"

[workspace.dependencies]
# Internal
ecsdk_core = { path = "crates/ecsdk_core" }
ecsdk_macros = { path = "crates/ecsdk_macros" }
ecsdk_app = { path = "crates/ecsdk_app" }
ecsdk_tasks = { path = "crates/ecsdk_tasks" }
ecsdk_term = { path = "crates/ecsdk_term" }
ecsdk_replicon = { path = "crates/ecsdk_replicon" }
ecsdk_replicon_transport = { path = "crates/ecsdk_replicon_transport" }
ecsdk_tracing = { path = "crates/ecsdk_tracing" }

# External
bevy = { version = "0.18", default-features = false, features = ["multi_threaded"] }
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
crossterm = { version = "0.29", features = ["event-stream"] }
futures-util = { version = "0.3", features = ["sink"] }
bevy_replicon = { version = "0.39", default-features = false, features = ["server", "client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
seldom_state = { git = "https://github.com/Wiwip/seldom_state.git", rev = "cc6c89f" }
interprocess = { version = "2.4", features = ["tokio"] }
clap = { version = "4", features = ["derive"] }
rand = "0.9"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
heck = "0.5"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
