[package]
name = "ecsdk"
version = "0.1.0"
edition = "2024"

[features]
default = []
app = ["dep:ecsdk_app"]
tasks = ["dep:ecsdk_tasks"]
term = ["dep:ecsdk_term"]
replicon = ["dep:ecsdk_replicon", "dep:ecsdk_replicon_transport", "dep:bevy_replicon"]
tracing = ["dep:ecsdk_tracing"]
macros = ["dep:ecsdk_macros"]

[dependencies]
bevy = { workspace = true }
bevy_replicon = { workspace = true, optional = true }
ecsdk_core = { workspace = true }
ecsdk_app = { workspace = true, optional = true }
ecsdk_tasks = { workspace = true, optional = true }
ecsdk_term = { workspace = true, optional = true }
ecsdk_replicon = { workspace = true, optional = true }
ecsdk_replicon_transport = { workspace = true, optional = true }
ecsdk_tracing = { workspace = true, optional = true }
ecsdk_macros = { workspace = true, optional = true }
serde = { workspace = true }
