[package]
name = "compose"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "compose"
path = "src/main.rs"

[dependencies]
ecsdk_core = { workspace = true }
ecsdk_app = { workspace = true }
ecsdk_tasks = { workspace = true }
ecsdk_term = { workspace = true }
ecsdk_replicon = { workspace = true }

bevy = { workspace = true, features = ["bevy_state", "serialize"] }
bevy_replicon = { workspace = true }
seldom_state = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
interprocess = { workspace = true }
crossterm = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
ecsdk_tracing = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
