[package]
name = "compose"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "compose"
path = "src/main.rs"

[dependencies]
ecsdk = { workspace = true, features = ["app", "tasks", "term", "network", "tracing", "macros"] }

bevy = { workspace = true, features = ["bevy_state", "serialize"] }
seldom_state = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
interprocess = { workspace = true }
crossterm = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
